--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^1.1.5",
+    "@astrojs/mdx": "^2.0.3",
     "@astrojs/sitemap": "^3.0.4",
     "@astrojs/tailwind": "^5.1.0",
-    "@astrolib/seo": "^0.6.0",
+    "@astrolib/seo": "1.0.0-beta.5",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "astro": "^3.6.4",
+    "astro": "^4.1.1",
+    "astro-meta-tags": "^0.2.0",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
